--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@vitejs/plugin-vue": "^4.6.2",
-    "alpinejs": "^3.13.8"
+    "alpinejs": "^3.13.8",
+    "swiper": "^9.1.0"
   }
 }
